--- a/views/index.html
+++ b/views/index.html
@@ -45,8 +45,7 @@
     const folderElement = document.createElement('div');
     folderElement.className = 'folder';
     folderElement.textContent = folder.name;
-    folderElement.addEventListener('click', () => redirectToFolder(folderId, folderName));
-    fetchAndDisplayFiles(folder.id, folder.name);
+    folderElement.addEventListener('click', () => redirectToFolder(folder.id, folder.name));
     document.getElementById('folders').appendChild(folderElement);
   }
 
